--- a/OSP_environment_destroy.yml
+++ b/OSP_environment_destroy.yml
@@ -1,31 +1,31 @@
 ---
 
-# Playbook to destroy Openshift instances, leaving networking configured
+# Playbook to destroy Openstack instances, leaving networking configured
 
 - hosts: all
   tasks:
 
   - name: Destroy 3Tier application database instance
     include_role:
-      name: openshift_instance
+      name: openstack_instance
       tasks_from: destroy_instances
       vars_from: database.yml
 
   - name: Destroy 3Tier application application1 instance
     include_role:
-      name: openshift_instance
+      name: openstack_instance
       tasks_from: destroy_instances
       vars_from: application1.yml
 
   - name: Destroy 3Tier application application2 instance
     include_role:
-      name: openshift_instance
+      name: openstack_instance
       tasks_from: destroy_instances
       vars_from: application2.yml
 
   - name: Destroy 3Tier application frontend instance
     include_role:
-      name: openshift_instance
+      name: openstack_instance
       tasks_from: destroy_instances
       vars_from: frontend.yml
 
