--- a/roles/openstack_instance/tasks/destroy_instances.yml
+++ b/roles/openstack_instance/tasks/destroy_instances.yml
@@ -1,6 +1,6 @@
 ---
 
-# Destroy Openshift server instance
+# Destroy Openstack server instance
 
   - name: Destroy server instance
     os_server:
