Update playbook hosts

--- a/OSP_environment_build.yml
+++ b/OSP_environment_build.yml
@@ -2,7 +2,7 @@
 
 # Playbook to create Openstack instances, setup networking and security
 
-- hosts: all
+- hosts: jumpbox
   
   roles:
     - openstack_network
