--- a/OSP_environment_start.yml
+++ b/OSP_environment_start.yml
@@ -2,7 +2,7 @@
 
 # Playbook to destroy Openstack instances, leaving networking configured
 
-- hosts: all
+- hosts: jumpbox
   gather_facts: false
   tasks:
 
