--- a/roles/openstack_network/tasks/main.yml
+++ b/roles/openstack_network/tasks/main.yml
@@ -1,4 +1,24 @@
 ---
+## RedHat Ansible Boot Camp homework assignment
+## Playbook have been written as a PoC for a 3Tier Application deployment
+## All playbook have been written via Ansible Core and used in Ansible Tower
+
+## Created a written by Paul Greenbank - Technical Consultant for Open System Specialists
+
+## Role description:
+#
+# Creates 2 OpenStack networks (internal & external), subnets are then assigned to the
+# networks and finally a router is created to route traffic between the internal and 
+# external networks
+#
+
+## Role enhancements post PoC:
+#
+# Further consideration into variablizing the network setup should be looked at to reduce the 
+# duplication of both the `os_network` and `os_subnet` modules in this role. 
+# This would also allow for more networks to be created without altering the role - just variables.
+#
+
 # Generic role to create Openstack network and subnets
 
   - name: Create Openstack external network
